--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-responsive-carousel": "^3.1.47",
+    "react-router": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
