--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "node-sass": "^4.11.0",
+    "npm": "^6.8.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-responsive-carousel": "^3.1.47",
     "react-router": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-slick": "^0.23.2"
   },
   "scripts": {
     "start": "react-scripts start",
