Made the subgallery category change photo transition smoother

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "node-sass": "^4.11.0",
     "npm": "^6.8.0",
     "react": "^16.8.3",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.8.3",
+    "react-lazyload": "^2.5.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
