--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "react-slick": "^0.21.0"
+    "react-slick": "^0.21.0",
+    "typeface-lato": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
